// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateAxisLabels it generates appropriate XAxis tick labels for a given range of data 1`] = `
Object {
  "dataType": "NON_NULL_NUMERIC",
  "labels": Array [
    Object {
      "index": 0,
      "label": "0.0",
    },
    Object {
      "index": 1,
      "label": "0.1",
    },
    Object {
      "index": 2,
      "label": "0.2",
    },
    Object {
      "index": 3,
      "label": "0.3",
    },
    Object {
      "index": 4,
      "label": "0.4",
    },
    Object {
      "index": 5,
      "label": "0.5",
    },
    Object {
      "index": 6,
      "label": "0.6",
    },
    Object {
      "index": 7,
      "label": "0.7",
    },
    Object {
      "index": 8,
      "label": "0.8",
    },
    Object {
      "index": 9,
      "label": "0.9",
    },
    Object {
      "index": 10,
      "label": "1.0",
    },
    Object {
      "index": 11,
      "label": "1.1",
    },
  ],
}
`;

exports[`generateAxisLabels it generates appropriate XAxis tick labels for a given range of data 2`] = `
Object {
  "dataType": "NON_NULL_NUMERIC",
  "labels": Array [
    Object {
      "index": 0,
      "label": "-1",
    },
    Object {
      "index": 1,
      "label": "0",
    },
    Object {
      "index": 2,
      "label": "1",
    },
  ],
}
`;

exports[`generateAxisLabels it generates appropriate XAxis tick labels for a given range of data 3`] = `
Object {
  "dataType": "NAMED",
  "labels": Array [
    Object {
      "index": 0,
      "label": "A",
    },
    Object {
      "index": 1,
      "label": "B",
    },
    Object {
      "index": 0,
      "label": "A",
    },
    Object {
      "index": 1,
      "label": "B",
    },
    Object {
      "index": 0,
      "label": "A",
    },
    Object {
      "index": 1,
      "label": "B",
    },
  ],
}
`;

exports[`generateAxisLabels it generates appropriate YAxis tick labels for a given range of data 1`] = `
Object {
  "dataType": "NON_NULL_NUMERIC",
  "labels": Array [
    Object {
      "index": 0,
      "label": "-4",
    },
    Object {
      "index": 1,
      "label": "-3",
    },
    Object {
      "index": 2,
      "label": "-2",
    },
    Object {
      "index": 3,
      "label": "-1",
    },
    Object {
      "index": 4,
      "label": "0",
    },
    Object {
      "index": 5,
      "label": "1",
    },
    Object {
      "index": 6,
      "label": "2",
    },
    Object {
      "index": 7,
      "label": "3",
    },
    Object {
      "index": 8,
      "label": "4",
    },
    Object {
      "index": 9,
      "label": "5",
    },
    Object {
      "index": 10,
      "label": "6",
    },
    Object {
      "index": 11,
      "label": "7",
    },
    Object {
      "index": 12,
      "label": "8",
    },
    Object {
      "index": 13,
      "label": "9",
    },
    Object {
      "index": 14,
      "label": "10",
    },
    Object {
      "index": 15,
      "label": "11",
    },
  ],
}
`;

exports[`generateAxisLabels it generates appropriate YAxis tick labels for a given range of data 2`] = `
Object {
  "dataType": "NON_NULL_NUMERIC",
  "labels": Array [
    Object {
      "index": 0,
      "label": "-4",
    },
    Object {
      "index": 1,
      "label": "-3",
    },
    Object {
      "index": 2,
      "label": "-2",
    },
    Object {
      "index": 3,
      "label": "-1",
    },
    Object {
      "index": 4,
      "label": "0",
    },
    Object {
      "index": 5,
      "label": "1",
    },
    Object {
      "index": 6,
      "label": "2",
    },
    Object {
      "index": 7,
      "label": "3",
    },
    Object {
      "index": 8,
      "label": "4",
    },
    Object {
      "index": 9,
      "label": "5",
    },
    Object {
      "index": 10,
      "label": "6",
    },
    Object {
      "index": 11,
      "label": "7",
    },
    Object {
      "index": 12,
      "label": "8",
    },
    Object {
      "index": 13,
      "label": "9",
    },
    Object {
      "index": 14,
      "label": "10",
    },
    Object {
      "index": 15,
      "label": "11",
    },
  ],
}
`;

exports[`generateAxisLabels it generates appropriate YAxis tick labels for a given range of data 3`] = `
Object {
  "dataType": "NON_NULL_NUMERIC",
  "labels": Array [
    Object {
      "index": 0,
      "label": "-4",
    },
    Object {
      "index": 1,
      "label": "-3",
    },
    Object {
      "index": 2,
      "label": "-2",
    },
    Object {
      "index": 3,
      "label": "-1",
    },
    Object {
      "index": 4,
      "label": "0",
    },
    Object {
      "index": 5,
      "label": "1",
    },
    Object {
      "index": 6,
      "label": "2",
    },
    Object {
      "index": 7,
      "label": "3",
    },
    Object {
      "index": 8,
      "label": "4",
    },
    Object {
      "index": 9,
      "label": "5",
    },
    Object {
      "index": 10,
      "label": "6",
    },
    Object {
      "index": 11,
      "label": "7",
    },
    Object {
      "index": 12,
      "label": "8",
    },
    Object {
      "index": 13,
      "label": "9",
    },
    Object {
      "index": 14,
      "label": "10",
    },
    Object {
      "index": 15,
      "label": "11",
    },
  ],
}
`;

exports[`generateAxisLabels it throws an error when data types are inconsistent across the data 1`] = `"Error in axis calibration: all series data plotted on a given axis must be of the same type!"`;

exports[`generateAxisLabels it throws an error when data types are inconsistent across the data 2`] = `"Error in axis calibration: all series data plotted on a given axis must be of the same type!"`;

exports[`generateAxisLabels it throws an error when data types are unknown 1`] = `"Error in axis calibration: unrecognised data type!"`;

exports[`generateAxisLabels it throws an error when data types are unknown 2`] = `"Error in axis calibration: unrecognised data type!"`;

exports[`generateAxisLabels it throws an error when passed a y axis with named buckets 1`] = `"Error in axis calibration: only numeric values currently allowed on y axis!"`;

exports[`generateAxisLabels it throws an error when passed a y axis with named buckets 2`] = `
Object {
  "dataType": "NAMED",
  "labels": Array [
    Object {
      "index": 0,
      "label": "A",
    },
    Object {
      "index": 1,
      "label": "B",
    },
    Object {
      "index": 0,
      "label": "A",
    },
    Object {
      "index": 1,
      "label": "B",
    },
    Object {
      "index": 0,
      "label": "A",
    },
    Object {
      "index": 1,
      "label": "B",
    },
  ],
}
`;
